--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -17,73 +17,98 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
       rel="stylesheet"
     />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Lado Oscuro</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul class="navegacion">
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="nosotros.html"> Nosotros</a></li>
-          <li><a href="productos.html">Productos</a></li>
-          <li><a href="envio.html">Envíos</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>
+
+    <header class="navegacion">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="envio.html">Envío</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="contacto.html">Contacto</a>
+              </li>
+              
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
-
     <h1 class="titulo">CONTACTO</h1>
 
-    <section id="grid_contacto">
 
-      <div class="card">
-        <p>
-          Para comunicarte con nosotros completa el formulario. Respondemos
-          todos los mensajes que nos llegan!
-        </p>
+    <form>
+      <div class="form-group row">
+        <label  class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control"placeholder="Escribí acá tu nombre">
+        </div>
       </div>
 
-    <form class="card">
-      <fieldset>
-        <legend>Datos Personales</legend>
-        <div>
-          <label for="nombre">Nombre</label>
-          <input type="text" id="nombre" required />
+      <div class="form-group row">
+        <label  class="col-sm-3 col-form-label">Apellido</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control"  placeholder="Escribí acá tu apellido">
         </div>
-
-        <div>
-          <label for="apellido">Apellido</label>
-          <input type="text" id="apellido" />
-        </div>
-
-        <div>
-          <label for="e-mail">Email</label>
-          <input type="email" id="e-mail" required />
-        </div>
-      </fieldset>
-
-      <fieldset>
-        <legend>Tu mensaje:</legend>
-        <div>
-          <textarea placeholder="Dejanos tu mensaje acá"></textarea>
-        </div>
-      </fieldset>
-
-      <div>
-        Querés subscribirte al newsletter?
-        <label for="si">Sí</label>
-        <input type="radio" name="opciones" id="si" />
-
-        <label for="no">No</label>
-        <input type="radio" name="opciones" id="no"
       </div>
-      <input type="submit" value="ENVIAR" />
+
+      <div class="form-group row">
+        <label for="inputEmail3" class="col-sm-3 col-form-label">Email</label>
+        <div class="col-sm-10">
+          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Dejanos acá tu mensaje:</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+
+      <fieldset class="form-group">
+        <div class="row">
+          <legend class="col-form-label col-sm-3 pt-0">Querés subscribirte al newsletter?</legend>
+          <div class="col-sm-10">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+              <label class="form-check-label" for="gridRadios1">
+                Sí
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+              <label class="form-check-label" for="gridRadios2">
+                No
+              </label>
+        </div>
+      </fieldset>
+  
+      <div class="form-group row">
+        <div class="col-sm-10">
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </div>
+      </div>
     </form>
-  </section>
 
+ 
     <hr />
     <footer class="footer"><p>TODOS LOS DERECHOS RESERVADOS 2022</p></footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
