--- a/IDEA_KARPINSKI/PAGES/nosotros.html
+++ b/IDEA_KARPINSKI/PAGES/nosotros.html
@@ -17,47 +17,62 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
       rel="stylesheet"
     />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Lado Oscuro</title>
   </head>
 
   <body>
-    <header>
-      <nav>
-        <ul class="navegacion">
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="nosotros.html"> Nosotros</a></li>
-          <li><a href="productos.html">Productos</a></li>
-          <li><a href="envio.html">Envíos</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>
+
+    <header class="navegacion">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="envio.html">Envío</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+              
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
 
     <h1 class="titulo">QUIENES SOMOS</h1>
 
-    <section id="grid_nosotros">
 
-      <img
-        class="imagen_qs"
-        src="../IMAGES/jimmy-nilsson-masth-rPA2Hy8RZD8-unsplash.jpg"
-        alt="Hombre trabajando"
-        title="Hombre cortando madera"
-        max-width: 100%;
-        height: auto; 
-      />
+    <div class="row">
+      <div class="col-sm-12">
         <div class="card">
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Dignissimos non ipsum ullam soluta accusamus! Id nobis voluptate
-            aspernatur laudantium. Quia, optio quisquam! Nemo mollitia corrupti
-            soluta nihil autem eius nisi.
-          </p>
+          <div class="card-body">
+            <img class="card-img-top" src="../IMAGES/jimmy-nilsson-masth-rPA2Hy8RZD8-unsplash.jpg" alt="Card image cap">
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Dignissimos non ipsum ullam soluta accusamus! Id nobis voluptate
+              aspernatur laudantium. Quia, optio quisquam! Nemo mollitia corrupti
+              soluta nihil autem eius nisi.</p>
+          </div>
         </div>
-      </section>
+      </div>
+    </div>
+
 
     <hr />
     <footer class="footer"><p>TODOS LOS DERECHOS RESERVADOS 2022</p></footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
