--- a/IDEA_KARPINSKI/index.html
+++ b/IDEA_KARPINSKI/index.html
@@ -17,39 +17,62 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Lado Oscuro</title>
-  </head> 
+  </head>
   <body>
-
-    <header>
-    <nav>
-      <ul class="navegacion">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="PAGES/nosotros.html"> Nosotros</a></li>
-        <li><a href="PAGES/productos.html">Productos</a></li>
-        <li><a href="PAGES/envio.html">Envíos</a></li>
-        <li><a href="PAGES/contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header class="navegacion">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/envio.html">Envío</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/contacto.html">Contacto</a>
+              </li>
+              
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
     <h1 class="titulo">MUEBLES INTERVENIDOS</h1>
 
-    <section>
-      <div class="card">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
-          impedit fuga, libero facere quae doloremque expedita quis magnam,
-          provident culpa aut? Error eos eveniet eligendi? Iusto velit harum
-          nulla aspernatur?
-        </p>
+
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="card card_texto">
+          <div class="card-body">
+            <h5 class="card-title">Un poco sobre lo que hacemos</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, odit dolor? Aliquam incidunt, fuga ex quaerat, magnam, a explicabo corrupti fugiat eveniet quam animi eaque voluptatibus nam quia laudantium ut!</p>
+          </div>
+        </div>
       </div>
-    </section>
+    </div>
 
     <hr />
     <footer class="footer"><p>TODOS LOS DERECHOS RESERVADOS 2022</p></footer>
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
