--- a/PAGES/envio.html
+++ b/PAGES/envio.html
@@ -18,25 +18,33 @@
       rel="stylesheet"
     />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-  />
-      <link rel="stylesheet" href="../css/styles.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/styles.css" />
     <title>Lado Oscuro</title>
   </head>
   <body>
-
     <header class="navegacion">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          </button>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          ></button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="../index.html"
+                  >Inicio</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="nosotros.html">Nosotros</a>
@@ -50,7 +58,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
-              
             </ul>
           </div>
         </div>
@@ -59,20 +66,20 @@
 
     <h1 class="titulo">ENVÍOS</h1>
 
-
     <div class="row">
       <div class="col-sm-6">
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Pick-up point</h5>
-            <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26448.594736655396!2d-59.21772320968556!3d-34.04196405894034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bba5d53f99206d%3A0xfc5fa34880dcf10c!2sLima%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1647222979920!5m2!1ses!2sar"
-            width="300"
-            height="300"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy">
-          </iframe>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26448.594736655396!2d-59.21772320968556!3d-34.04196405894034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bba5d53f99206d%3A0xfc5fa34880dcf10c!2sLima%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1647222979920!5m2!1ses!2sar"
+              width="300"
+              height="300"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            >
+            </iframe>
             <p class="card-text">Nuestro taller</p>
           </div>
         </div>
@@ -81,16 +88,21 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Envío personalizado</h5>
-            <p class="card-text"> Escribinos y te decimos la mejor manera de hacerte llegar el producto.
-              Por encomienda o flete.</p>
+            <p class="card-text">
+              Escribinos y te decimos la mejor manera de hacerte llegar el
+              producto. Por encomienda o flete.
+            </p>
           </div>
         </div>
       </div>
     </div>
 
-    
     <hr />
     <footer class="footer"><p>TODOS LOS DERECHOS RESERVADOS 2022</p></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
