--- a/index.html
+++ b/index.html
@@ -30,49 +30,77 @@
     <header class="navegacion">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          </button>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          ></button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Inicio</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/nosotros.html">Nosotros</a>
+                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/nosotros.html"
+                  >Nosotros</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/productos.html">Productos</a>
+                <a
+                  class="nav-link"
+                  href="../IDEA_KARPINSKI/PAGES/productos.html"
+                  >Productos</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/envio.html">Envío</a>
+                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/envio.html"
+                  >Envío</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/contacto.html">Contacto</a>
+                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/contacto.html"
+                  >Contacto</a
+                >
               </li>
-              
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <h1 class="titulo">MUEBLES INTERVENIDOS</h1>
+    <section>
+      <div
+        class="background"
+        style="
+          background-image: url(../IDEA_KARPINSKI/IMAGES/jan-antonin-kolar-HB26V8IRL2k-unsplash.jpg);
+          height: 100vh;
+        "
+      ></div>
 
-
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="card card_texto">
-          <div class="card-body">
-            <h5 class="card-title">Un poco sobre lo que hacemos</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, odit dolor? Aliquam incidunt, fuga ex quaerat, magnam, a explicabo corrupti fugiat eveniet quam animi eaque voluptatibus nam quia laudantium ut!</p>
+      <div class="row tarjeta1">
+        <div class="col-sm-12">
+          <div class="card card_texto">
+            <div class="card-body">
+              <h1 class="card-title titulo">LADO OSCURO</h1>
+              <p class="card-text">Desde 2021</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-
+    </section>
     <hr />
     <footer class="footer"><p>TODOS LOS DERECHOS RESERVADOS 2022</p></footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
