--- a/IDEA_KARPINSKI/PAGES/nosotros.html
+++ b/IDEA_KARPINSKI/PAGES/nosotros.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../IMAGES/favicon-16x16.png"
+      type="image/x-icon"
+    />
     <meta
       name="description"
       content="Conoce a las personas detrás de la tienda"
@@ -64,25 +68,28 @@
 
     <h1 class="titulo">QUIENES SOMOS</h1>
 
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="card">
-          <div class="card-body">
-            <img
-              class="card-img-top figure-img img-fluid rounded"
-              src="../IMAGES/jimmy-nilsson-masth-rPA2Hy8RZD8-unsplash.jpg"
-              alt="Card image cap"
-            />
-            <p class="card-text">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Dignissimos non ipsum ullam soluta accusamus! Id nobis voluptate
-              aspernatur laudantium. Quia, optio quisquam! Nemo mollitia
-              corrupti soluta nihil autem eius nisi.
-            </p>
+    <section>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="card">
+            <div class="card-body">
+              <img
+                class="card-img-top figure-img img-fluid rounded"
+                src="../IMAGES/beazy-XggVb8YySUM-unsplash (1).jpg"
+                alt="Persona trabajando con madera"
+              />
+              <p class="card-text">
+                Somos una empresa familiar, nacida en plena pandemia.Nos
+                dedicamos a la venta de muebles en crudo e intervenidos. Los
+                productos en crudo son enmacillados y lijados antes de estar a
+                la venta. En cuanto a nuestros productos intervenidos, los
+                diseños son 100% originales y a pedido.
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <hr />
     <footer class="footer"><p>TODOS LOS DERECHOS RESERVADOS 2022</p></footer>
