--- a/IDEA_KARPINSKI/index.html
+++ b/IDEA_KARPINSKI/index.html
@@ -42,24 +42,24 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/nosotros.html"
+                <a class="nav-link" href="PAGES/nosotros.html"
                   >Nosotros</a
                 >
               </li>
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="../IDEA_KARPINSKI/PAGES/productos.html"
+                  href="PAGES/productos.html"
                   >Productos</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/envio.html"
+                <a class="nav-link" href="PAGES/envio.html"
                   >Envío</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../IDEA_KARPINSKI/PAGES/contacto.html"
+                <a class="nav-link" href="PAGES/contacto.html"
                   >Contacto</a
                 >
               </li>
